cluster/gitops/monitoring/fluent/operator/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fluent-operator
  labels: &labels
    app.kubernetes.io/name: fluent-operator
    app.kubernetes.io/component: operator
spec:
  selector: *labels
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
